--- a/src/Components/SoundPlayer/SoundPlayer.css
+++ b/src/Components/SoundPlayer/SoundPlayer.css
@@ -8,6 +8,7 @@
 .b2 {
   border-width: 2px;
 }
+body div a { color: #C06C84; }
 
 .muted {
   opacity: .3;
@@ -17,6 +18,10 @@
   padding: .25rem .3rem;
 }
 
+.soundplayer ul li {
+  font-size: 18px;
+  font-size: 500;
+}
 .custom-track-bg::-webkit-slider-runnable-track {
   background-color: rgba(0, 0, 0, .25);
 }
