--- a/src/Components/SoundPlayer/Styles/progress.css
+++ b/src/Components/SoundPlayer/Styles/progress.css
@@ -1,8 +1,9 @@
 .sb-soundplayer-progress-container {
   background-color: var(--bg-light);
-  width: 100%;
-  height: 10px;
-  margin-top: 1rem;
+  width: 95%;
+  margin: 0 auto;
+  height: 20px;
+  margin-top: 8px;
   overflow: hidden;
   cursor: pointer;
 }
@@ -10,6 +11,4 @@
 .sb-soundplayer-progress-inner {
   background-color: var(--crab);
   height: 100%;
-  -webkit-transition: width .2s ease-in;
-  transition: width .2s ease-in;
 }
